@@ -1,5 +1,11 @@
 0.0277 2017-10-05
   - add Arrays package
+  - add Arrays::copy_of_byte
+  - add Arrays::copy_of_short
+  - add Arrays::copy_of_int
+  - add Arrays::copy_of_long
+  - add Arrays::copy_of_float
+  - add Arrays::copy_of_double
   - fix native subroutine exception bugs
 0.0276 2017-10-05
   - rename back to_array to get_elements
